# open-agency

./: .env.example  BACKLOG.md  PRIMER.md  README.md  config.yaml  pyproject.toml
docs/: persona_library.md
evals/: example_company.md
open_agency/: __init__.py  capabilities.py  config.py  hr_agent.py  main.py  models.py  policy.py
open_agency/policies/: example_company.md
tests/: test_request.py
