[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "open-agency"
version = "0.1.0"
description = "An HR request API. One verb — request — that consults written company policy and usually says no."
readme = "README.md"
requires-python = ">=3.12"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [{ name = "Bill Berger", email = "wgberger@gmail.com" }]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "anthropic>=0.69",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8", "httpx>=0.27"]

[tool.hatch.build.targets.wheel]
packages = ["open_agency"]
